# project-templates

./: requirements.txt
MonsterUI/.cursor/: fasthtml.mdc  ui.mdc
MonsterUI/.cursor/rules/: fasthtml.mdc  htmx.mdc
MonsterUI/app/: main.py
MonsterUI/app/posts/: testpost.md
Tailwind/ref_docs/: tailwind.md
project_templates_cli/: README.md  pyproject.toml  setup.py
project_templates_cli/project_templates_cli/: __init__.py  __main__.py
project_templates_cli/project_templates_cli/templates/: __init__.py
project_templates_cli/project_templates_cli/templates/MonsterUI/app/: main.py
project_templates_cli/project_templates_cli/templates/Tailwind/app/: render_markdown.py
project_templates_cli/project_templates_cli/templates/Tailwind/ref_docs/: htmx.md  markdown.md
