[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "project-templates-cli"
version = "0.1.0"
description = "A CLI tool for managing project templates"
requires-python = ">=3.7"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.7.0",
]

[project.scripts]
project-templates = "project_templates_cli.__main__:app" 